--- a/python.html
+++ b/python.html
@@ -55,7 +55,7 @@
 								<hr />
 
 								<h4>Master Ticket (a basic ticket selling application)</h4>
-								<p>Masterticket is an application for ticket sales. It keeps track of the number of tickets remaining, prompts users for information about how many tickets they want, confirms orders, and guides the user through any errors that occur.</p>
+								<p>Master Ticket is an application for ticket sales. It keeps track of the number of tickets remaining, prompts users for information about how many tickets they want, confirms orders, and guides the user through any errors that occur.</p>
 
 								<p>Etiam iaculis nulla ipsum, et pharetra libero rhoncus ut. Phasellus rutrum cursus velit, eget condimentum nunc blandit vel. In at pulvinar lectus. Morbi diam ante, vulputate et imperdiet eget, fermentum non dolor. Ut eleifend sagittis tincidunt. Sed viverra commodo mi, ac rhoncus justo. Duis neque ligula, elementum ut enim vel, posuere finibus justo. Vivamus facilisis maximus nibh quis pulvinar. Quisque hendrerit in ipsum id tellus facilisis fermentum. Proin mauris dui, at vestibulum sit amet, auctor bibendum neque.</p>
 
